--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,13 +2,11 @@
 FROM debian:latest
 
 # Устанавливаем основные утилиты
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get upgrade && apt-get install -y \
     git \
     python3 \
     gcc \
     python3-pip \
-    openjdk-11-jdk \
-    apt-transport-https \
     wget \
     curl \
     nodejs \
@@ -18,11 +16,8 @@ RUN apt-get update && apt-get install -y \
 # Устанавливаем .NET SDK
 RUN wget https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
 RUN dpkg -i packages-microsoft-prod.deb
-RUN apt-get update && apt-get install -y dotnet-sdk-6.0
+RUN apt-get update && apt-get install -y dotnet-sdk-8.0
 
-# Устанавливаем необходимые библиотеки для каждого языка
-RUN pip3 install --upgrade pip
-RUN npm install -g npm
 
 # Настраиваем рабочую директорию
 WORKDIR /workspace
@@ -31,7 +26,7 @@ WORKDIR /workspace
 RUN git clone https://github.com/Razglidai/runtime-api.git -b build .
 
 # Копируем файл службы в систему
-COPY ./docker/app-daemon.service /etc/systemd/system/
+COPY ./app-daemon.service /etc/systemd/system/
 
 # Включаем и запускаем службу
 RUN systemctl enable app-daemon.service
