--- a/docker/runtime-api.conf
+++ b/docker/runtime-api.conf
@@ -1,3 +1,5 @@
+[supervisord]
+nodaemon=true
 [program:runtime-api]
 directory=/workspace/build/net8.0/
 command=/usr/bin/dotnet /workspace/build/net8.0/runtime-api.dll
